all components rendering on page, adding final css styling

--- a/bestbuyfec/public/index.html
+++ b/bestbuyfec/public/index.html
@@ -23,11 +23,11 @@
     <div id="root"></div>
     <div id="header"></div>
     <div id="Pricing-Cart-Gallery"></div>
-    <!-- <div id="alsoviewed"></div> -->
+    <div id="alsoviewed"></div>
     <div id="overview"></div>
     <div id="specifications"></div>
     <div id="reviews"></div>
-    <!-- <div id="questions_answers"></div> -->
+    <div id="questions_answers"></div>
     <div id="footer"></div>
 
 
@@ -38,5 +38,7 @@
     <script src="http://localhost:3010/static/js/bundle.js"></script>
     <script src="http://localhost:3041/static/js/bundle.js"></script>
     <script src="http://localhost:3002/static/js/bundle.js"></script>
+    <script src="http://localhost:3000/static/js/bundle.js"></script>
+    <script src="http://localhost:3043/static/js/bundle.js"></script>
   </body>
 </html>
